# paper

./: .envrc  .gitignore  Cargo.toml  LICENSE.txt  README.md  build.rs  rustfmt.toml
.github/workflows/: ci.yml
docs/: compiling_notes.txt  porting_todo.md  todo.md
examples/full_paper/.paper_data/: build_environment.txt  cited_references.json  last_paper_version.txt
examples/full_paper/content/: 00_intro.md
examples/full_paper/output/: Cochrane_THEO8063_full_paper.docx  Cochrane_THEO8063_full_paper.tex
examples/lists/.paper_data/: build_environment.txt  last_paper_version.txt
examples/lists/content/: index.md
examples/lists/output/: [AUTHOR]_[MNEMONIC]_lists.docx  [AUTHOR]_[MNEMONIC]_lists.tex
examples/misc_filter_show/: .paper_resources  csl.json
examples/misc_filter_show/.paper_data/: build_environment.txt  last_paper_version.txt
examples/misc_filter_show/output/: DatumsAndThings.docx  DatumsAndThings.tex
resources/completions/: _paper  _rust-paper  paper.bash  paper.fish  rust-paper.bash  rust-paper.fish
resources/project_template/.paper_resources/: ChicagoStyle_NoTitlePage_Template.docx  ChicagoStyle_Template.docx  ChicagoStyle_Template.tex
resources/project_template/.paper_resources/filters/: filter-aquinas.lua  filter-bible-ref.lua  filter-docx-adonai.lua  post-filter-bibliography-label.lua  post-filter-docx-ensure-first.lua  post-filter-institutional-abbreviations.lua  post-filter-section-symbols.lua  util.lua
resources/scripts/: ref_list.lua  stripped_md.lua
scripts/: build_release.sh  fmt.sh  get_version.sh  prep_release.sh  release.sh  reset-edit-stats-on-docx.py  tag_release.sh  update_examples.sh
src/: build.rs  cli.rs  config.rs  docx.rs  errors.rs  fmt.rs  formats.rs  latex.rs  main.rs  metadata.rs  pandoc_wrap.rs  project_setup.rs  save.rs  subprocess.rs  util.rs  watcher.rs  wc.rs
