[package]
name = "rust-paper"
version = "0.5.0"
edition = "2021"
authors = ["Shane Liesegang"]
description = "Shane’s little paper-{writing|managing|building} utility"
# readme = "README.md"
readme = false
repository = "https://github.com/sjml/rust-paper"
license = "MIT"
keywords = ["academic", "writing", "references", "markdown", "latex"]
categories = ["command-line-utilities", "template-engine", ]

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
filetime = "0.2.19"
include_dir = "0.7.3"
regex = "1.7.0"
state = "0.5.3"
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
tempfile = "3.3.0"
termcolor = "1.1.3"
time = { version = "0.3.17", features = ["parsing", "local-offset", "formatting", "macros"] }
walkdir = "2.3.2"
yaml-rust = "0.4.5"
zip = { version = "0.6.3", default-features = false, features = ["deflate", "constant_time_eq", "time"] }
