[package]
name = "paper"
version = "0.5.11"
edition = "2021"
authors = ["Shane Liesegang"]
description = "Shane’s little paper-{writing|managing|building} utility"
readme = "README.md"
repository = "https://github.com/sjml/paper"
license = "MIT"
keywords = ["academic", "writing", "references", "markdown", "latex"]
categories = ["command-line-utilities", "template-engine", ]

[build-dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
clap_complete = "4.0.7"

[dependencies]
anyhow = "1.0.68"
chrono = "0.4.23"
clap = { version = "4.0.32", features = ["derive", "wrap_help"] }
dialoguer = "0.10.2"
filetime = "0.2.19"
include_dir = "0.7.3"
notify = "5.0.0"
plotters = "0.3.4"
regex = "1.7.0"
serde_json = "1.0.91"
state = "0.5.3"
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
tempfile = "3.3.0"
termcolor = "1.1.3"
time = { version = "0.3.23", features = ["local-offset"] }
walkdir = "2.3.2"
yaml-rust = "0.4.5"
zip = { version = "0.6.3", default-features = false, features = ["deflate", "constant_time_eq", "time"] }
