[package]
name = "paper"
version = "0.6.0"
edition = "2021"
authors = ["Shane Liesegang"]
description = "Shane’s little paper-{writing|managing|building} utility"
readme = "README.md"
repository = "https://github.com/sjml/paper"
license = "MIT"
keywords = ["academic", "writing", "references", "markdown", "latex"]
categories = ["command-line-utilities", "template-engine", ]

[build-dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
clap_complete = "4.0.7"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive", "wrap_help"] }
dialoguer = "0.11.0"
filetime = "0.2.24"
notify = "6.1.1"
plotters = "0.3.6"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["blocking"] }
serde_json = "1.0.127"
state = "0.6.0"
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
tempfile = "3.12.0"
termcolor = "1.4.1"
time = { version = "0.3.36", features = ["local-offset"] }
walkdir = "2.5.0"
yaml-rust = "0.4.5"
zip = { version = "2.2.0", default-features = false, features = ["deflate", "constant_time_eq", "time"] }
